--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
     fbq('init', '1473358573972434');
     fbq('track', 'PageView');
   </script>
-  <noscript>
-    <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=1473358573972434&ev=PageView&noscript=1"/>
-  </noscript>
   <!-- End Meta Pixel Code -->
 
   <script src="https://cdn.tailwindcss.com"></script>
@@ -87,6 +83,12 @@
   </script>
 </head>
 <body>
+
+  <!-- Meta Pixel noscript fallback -->
+  <noscript>
+    <img height="1" width="1" style="display:none"
+         src="https://www.facebook.com/tr?id=1473358573972434&ev=PageView&noscript=1"/>
+  </noscript>
 
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
